Fix scroll / overflow / smash on feature list tab

--- a/css/materialize-overrides.scss
+++ b/css/materialize-overrides.scss
@@ -15,7 +15,11 @@
   background-color: $accent-color;
 }
 
-/* fix collection-item used in list */
+/* fix collection{-item} used in list */
+.collection {
+  margin: 0 !important;
+}
+
 .collection-item {
-  height: auto;
+  height: auto !important;
 }
